<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:scrollbars="vertical"
    android:scrollbarSize="5dp"
    android:scrollbarStyle="insideInset"
    tools:context=".account.AccountInfo">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="8dp"
        android:text="@string/user_name_tv_txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/userName_EditText_AccountActivity"
        app:layout_constraintEnd_toStartOf="@+id/userName_EditText_AccountActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userName_EditText_AccountActivity"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="8dp"
        android:text="@string/email_tv_txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/email_EditText_AccountActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email_EditText_AccountActivity"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp"
        android:paddingStart="10dp"
        android:text="@string/change_password_AccountActivity"
        android:background="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/password_EditText_AccountActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_EditText_AccountActivity" />

    <EditText
        android:id="@+id/userName_EditText_AccountActivity"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:hint="@string/user_name_register"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/email_EditText_AccountActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_EditText_AccountActivity"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/email_register"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/userName_EditText_AccountActivity" />

    <EditText
        android:id="@+id/password_EditText_AccountActivity"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:hint="@string/enter_new_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirm_AccountActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonConfirm_AccountActivity"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_corner"
        android:text="@string/confirm_AccountInfo"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_EditText_AccountActivity" />
</android.support.constraint.ConstraintLayout>